tests/ui/production_simulated_backend_rejected.rs
use lattice_aggregation::{
    production::coordinator::{AggregateAttemptRequest, CoordinatorAggregateGate},
    SimulatedBackend,
};

fn main() {
    let _ = core::any::type_name::<AggregateAttemptRequest>();
    let _ = CoordinatorAggregateGate::<SimulatedBackend>::finalize;
}
